# Elwood_bot

./: .env  .gitignore  LICENSE  README.md  content.py  data.JSON  guus.py  help.py  invite.py  main.py  ping.py  pyproject.toml  requirements.txt  restart.py  roll.py  test.py  utils.py
cogs/: content.py  debug.py  debuglevel.py  earthdate.py  guus.py  help.py  holiday_mode.py  invite.py  json.py  log.py  loglevel.py  ping.py  rank.py  restart.py  roll.py  sleep_mode.py  stardate.py  talk.py  toggle_server.py
