[project]
name = "elwood-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py",
    "python-a2s>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "table2ascii>=1.1.3",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Rapptz/discord.py", rev = "e94fb455274d78969922082bb9822f88345984d5" }
